# graphify-rs

./: Cargo.toml  README.md
.github/workflows/: build.yml
.trae/skills/graphify-rs/: SKILL.md
graphify-out/: graph.json
src/: analyze.rs  cluster.rs  detect.rs  extract_md.rs  graph.rs  lib.rs  main.rs  mcp.rs  models.rs  semantic.rs
test-out/: graph.json
